<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dimidych.policyservicestarter.LogViewerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/lblFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblFrom"
                android:layout_margin="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/btnFrom"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp" />

            <TextView
                android:id="@+id/lblTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTo"
                android:layout_margin="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btnTo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/lblEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblEvent"
                android:layout_margin="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/txtEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnFind"
            android:text="@string/btnFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" />

        <ListView
                android:id="@+id/lstEvents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:choiceMode="none"
                android:descendantFocusability="beforeDescendants" />

    </LinearLayout>
</FrameLayout>
